2008-06-14  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/action.c(action_shellConfigureNotify): If autoresize is turned
	off and actual scale is "Fit to window", then rescale.
	
	* src/gv_user_res.dat: New scale "Fit to window"
	
	* src/misc.c (set_new_scale): Handle "Fit to window"-scale
	
	* src/scale.c (scale_parseScales): Adjust parser to handle new
	"Fit to window"-scale (symbolic scale factor is 0.000).

2008-06-13  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/main.c, src/gv_message.h, src/resource.c:  Rename infoWarnings to
	infoErrors,  likewise for resource infoVerbose

	* src/gv_font_res.dat, src/gv_layout_res.dat, src/gv_misc_res.dat:
	Entries for new setting for infoVerbose on gv options popup

	* src/options_gv.c: Visual editing of resource infoVerbose

2008-06-08  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/*.c:  include ac_config.h  first
	
	* configure.ac: Define intptr_t as preprocessor macro if necessary

2008-06-07  Markus Steinborn <msteinbo@uni-paderborn.de>

	* include inttypes.h only if HAVE_INTTYPES_H is set
	
	* src/main_resources.h: Do not use empty array size for initialized
	array of size 0 -- it makes problems with ISO C89.
	
	* configure.ac: added "--with-setenv-code"
	
	* src/setenv.[ch]: setenv emulation code
	
	* src/Makefile.am: include setenv.c if necessary

2008-06-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.4.90.
	
	* src/*: Fix warnings (patch by debian)

	* doc/Makefile.am: build doc/gv.1 by help2man if required
	
	* doc/gv.texi: Document new -widgetless switch 
	(patch by debian)
	
	* src/gv_widgetless.dat: Resource for widgetless mode (new file)
	(patch by debian)
	
	* src/gv_message.h: Document new -widgetless switch 
	(patch by debian)
	
	* src/resource.c: Handle new -widgetless switch (patch by debian)
	
	* src/main_globals: added widgetless_p	(patch by debian)
	
	* src/main.c: Parsing of "-widgetless" (patch by debian)
	