@@ -94,7 +94,7 @@ action_shellConfigureNotify(w, event, params, num_params)
      IIMESSAGE(new_width,new_height)
   }
   if (new_width && new_height) {
-    if (!gv_scales[gv_scale]->scale && !app_res.auto_resize)
+    if (!gv_scales[gv_scale]->scale <= 0 && !app_res.auto_resize)
     {
        misc_savePagePosition();
        show_page(REQUEST_NEW_SCALE,NULL);
